sqlite/conformance/sqlite-sqltests/snapshot_tests/indexes/snapshots/in-seek-sort-elision__eqp-cheaper-unordered-index-wins-without-order-by.snap
---
source: in-seek-sort-elision.sqltest
expression: |-
  SELECT k, j, pad FROM t
      WHERE k IN (1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20) AND w = 7;
info:
  statement_type: SELECT
  tables:
  - t
  setup_blocks:
  - two_index_schema
  database: ':memory:'
---
QUERY PLAN
`--SEARCH t USING INDEX t_w (w=?)
