sqlite/conformance/sqlite-sqltests/snapshot_tests/indexes/snapshots/in-seek-sort-elision__eqp-in-seek-inner-loop-of-join-not-elided.snap
---
source: in-seek-sort-elision.sqltest
expression: SELECT o.id, t.k FROM o, t WHERE t.k IN (3, 1, 2) ORDER BY t.k, o.id;
info:
  statement_type: SELECT
  tables:
  - o
  setup_blocks:
  - asc_schema
  database: ':memory:'
---
QUERY PLAN
|--SEARCH t USING INDEX t_kj (k=?)
|--SCAN o
`--USE SORTER FOR ORDER BY
