sqlite/conformance/sqlite-sqltests/snapshot_tests/indexes/snapshots/in-seek-sort-elision__eqp-literal-list-order-by-trailing-column-elided.snap
---
source: in-seek-sort-elision.sqltest
expression: SELECT k, j FROM t WHERE k IN (3, 1, 2) ORDER BY k, j;
info:
  statement_type: SELECT
  tables:
  - t
  setup_blocks:
  - asc_schema
  database: ':memory:'
---
QUERY PLAN
`--SEARCH t USING INDEX t_kj (k=?)
